# HerrmannCode

./: .gitmodules
blog/go-design/: .gitignore  Person.java  Readme.md  person.c  person.go
blog/go_vs_d-1/: simplereduce.d  simplereduce.go
c/rand/: count.c  countup.c  funkyc.c
d/download-speed/: .gitignore  dub.json
d/google-tasks-oauth2/: .gitignore  dub.json
d/markdown-server/: README.md  dub.json  dub.selections.json
d/prettycat/: prettycat.d  prettycatcli.d  undoprettycat.d
d/rands/: .gitignore  asyncdownload  asyncdownload.d  badalias.d  chararray.d  format.d  hw.d  isunder.d  jarray.d  notprimetimetricks.d  paralleltest.d  puretest.d  scopetest.d  stringtest.d  tricks.d  uriencode.d
d/snips-from-sci/: inheritance-associative-array.d
docker/fun/: cathode.sh  chrome-in-docker-wut.sh  spotify-in-docker-works-maybe.sh
docker/hw/: Dockerfile
go/gobyexample/: 1.helloworld.go  10.map.go  11.range.go  12.functions.go  13.multiplevalfunction.go  14.variadic.go  15.closures.go  16.recursion.go  17.pointers.go  18.structs.go  19.methods.go  2.values.go  20.interfaces.go  21.errors.go  22.goroutines.go  23.channels.go  24.bufferedchan.go  25.chansync.go  26.chandirection.go  27.select.go  3.variables.go  4.constants.go  5.for.go  6.ifelse.go  7.switch.go  8.arrays.go  9.slices.go  test.go
go/lilmdserver/: parse.go  test.md
js/: nginx.conf
todo/backend/c++-crow/: CMakeLists.txt  main.cpp
todo/backend/c++-crow/backend/: CrowBack.cpp  CrowBack.h  Todo.cpp  Todo.h  TodoList.cpp  TodoList.h
todo/backend/c++-crow/simplefront/: defaulttodos.mustache
(+60 files in other folders)
